@@ -9,6 +9,7 @@ Version 1.1.5 to be released
 - Bug #1577: Fixed the bug in CMssqlSchema::compareTableNames() (Qiang)
 - Bug #1592: Fixed the bug that the hidden field generated by CHtml::checkBox may have the same ID as the checkbox. (Qiang)
 - Bug #1615: Fixed the bug that caused CLogFilter::filter() to add context informations when the log was empty (Y!!)
+- Enh #1419: CMaskedTextField, CAutoComplete, CStarRating, CJuiDatePicker, CJuiAutoComplete and CJuiSliderInput now can be used with tabular input (Sam Dark)
 - Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
 - Enh #1546: Fixed the bug that disabling behaviors did not detach behavior event handlers (Qiang)
 - Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
